fixed text overflow

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,8 @@ body {
 }
 
 #question {
-  height: 100px;
+  height: 100%;
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,9 +67,9 @@ body {
   top: 10%; 
   right: 0;
   left: 0;
-  margin: 0 auto;
-  height: 250px;
-  width: 400px;
+  margin: auto;
+  width: 90%;
+  max-width: 400px;
   background-color: #171717;
   border-radius: 15px;
   border: 2px solid #9dffad;
@@ -134,6 +135,7 @@ button {
   font-size: 16px;
   font-weight: bold;
   width: 300px;
+  max-width: 100%;
   height: 50px;
   color: white;
   background-color: #171717;
